# SIC-IMS-CRM

./: .gitignore  .pg_service.conf  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tailwind.config.js
src/: db.sqlite3  manage.py
src/SistersInChrist/: .SIC_pgpass  .pg_service.conf  asgi.py  settings.py  urls.py  wsgi.py
src/crm/: admin.py  models.py  views.py
src/crm/migrations/: 0001_initial.py  0002_initial.py  0003_alter_volunteeragreement_volunteer.py  0004_rename_sex_attendee_birth_gender.py  0005_alter_attendee_birth_gender.py  0006_remove_attendeesignup_event_and_more.py
src/crm/templates/crm/: volunteer.html
src/event/: admin.py  models.py
src/event/migrations/: 0001_initial.py  0002_event_published.py
src/home/: admin.py  middleware.py  urls.py  views.py
src/home/static/home/css/: main.min.css
src/home/templates/: base.html
src/home/templates/home/: home.html
src/inventory/: admin.py  models.py  urls.py  views.py
src/inventory/migrations/: 0001_initial.py  0002_alter_category_options_alter_category_description.py  0003_categorycriteria.py
src/inventory/templates/inventory/: check_out.html
